--- a/src/tldraw/writing-menu-bar/writing-menu-bar.scss
+++ b/src/tldraw/writing-menu-bar/writing-menu-bar.scss
@@ -1,12 +1,7 @@
 
 
 
-// Enables placing elements outside of the embed
-.markdown-source-view.mod-cm6 .cm-content > .cm-preview-code-block.cm-embed-block.markdown-rendered[contenteditable=false]:has(.ink_writing-embed),
-.markdown-source-view.mod-cm6 .cm-content > .cm-preview-code-block.cm-embed-block.markdown-rendered[contenteditable=false]:has(.ink_writing-embed):hover {
-    contain: unset !important;
-    overflow: visible;
-}
+
 
 
 
