--- a/src/tldraw/writing/writing-embed.scss
+++ b/src/tldraw/writing/writing-embed.scss
@@ -1,6 +1,13 @@
 
 
 
+// Enables placing elements outside of the embed
+.markdown-source-view.mod-cm6 .cm-content > .cm-preview-code-block.cm-embed-block.markdown-rendered[contenteditable=false]:has(.ink_writing-embed),
+.markdown-source-view.mod-cm6 .cm-content > .cm-preview-code-block.cm-embed-block.markdown-rendered[contenteditable=false]:has(.ink_writing-embed):hover {
+    contain: unset !important;
+    overflow: visible;
+}
+
 .cm-preview-code-block.cm-embed-block.markdown-rendered:has(.ink_writing-embed) {
     margin: 0 calc(-1 * var(--file-margins)) !important;
 }
